[#249] fix/공개 예정(최신,인기,예정순) 애니 제목 선택